@@ -527,6 +527,7 @@ namespace libtorrent
 		
 		int complete = int(e.dict_find_int_value("complete", -1));
 		int incomplete = int(e.dict_find_int_value("incomplete", -1));
+		int downloaded = int(e.dict_find_int_value("downloaded", -1));
 
 		std::list<address> ip_list;
 		if (m_tracker_connection)
@@ -542,7 +543,7 @@ namespace libtorrent
 		}
 
 		cb->tracker_response(tracker_req(), m_tracker_ip, ip_list, peer_list
-			, interval, min_interval, complete, incomplete, external_ip, trackerid);
+			, interval, min_interval, complete, incomplete, downloaded, external_ip, trackerid);
 	}
 
 }
